--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>lvmh</title>
   </head>
+  <style href="./static/common.css"></style>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
